--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-20>
+#+DATE: Time-stamp: <2020-02-21>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -29,6 +29,11 @@ How bad is install docu in 20.1.0?
   - updating intro tutorial and docu => presentation, (online)
     documentation: still ANSYS-Mode 16.1.!
 ** Todos
+   - 1/en, en is variable but fraction not fontified
+   - what is the advantage of ARG1-9?
+   - C-c C-s in *APDL code* file-name-extension: Wrong type argument:
+     stringp, nilError during redisplay: (jit-lock-function 1)
+     signaled (wrong-type-argument stringp nil)
    - What about WB JavaScript!?
    - WB templates :-), no geom stuff
      - new -wb-template.el
