--- a/TODO.org
+++ b/TODO.org
@@ -14,20 +14,14 @@
 #+title: The TODO file of APDL-Mode
 
 #+STARTUP: showall
-
-Point - or minor release?
-How bad is install docu in 20.1.0?
-
-* TODO 20.2.0 Release
-  DEADLINE: <2020-04-20 Mon>
+* 20.2.0 Release
   - WB template system => template branch
+    - dispatcher / selctor : keyword search
     - temperature dependent material
     - reaction forces
     - some images in post
     - writing files
     - brittle failure criterion
-  - updating intro tutorial and docu => presentation, (online)
-    documentation: still ANSYS-Mode 16.1.!
 ** Todos
    - 1/en, en is variable but fraction not fontified
    - what is the advantage of ARG1-9?
@@ -54,14 +48,28 @@ How bad is install docu in 20.1.0?
 ** checks
    - Customisation system
 ** wishes
-   - Trigger the ANSYS online manual, if there's no local docu for C-c
-     C-b
+   - open EWW in another window!
+   - ANSYS uses sinve version 19. by default its online help.  Trigger
+     the ANSYS online manual, if there's no local docu for C-c
+     C-b. You need to log into the ANSYS portal to read the online
+     tutorial!  This address should work if you already logged into
+     the help
+     https://ansyshelp.ansys.com/account/secured?returnurl=/Views/Secured/corp/v195/ans_cmd/Hlp_C_NSEL.html
+     - Ansys help configuration:
+
    - Melpa integration
    - base APDL-Mode on ANSYS 201
    - document the Apdl Parameter Help Duration in M-?
    - how about deleting the work branch?
    - are the material properties documented, matlib?  Matlib is used
      in -template.el, how about document this directory somewhere?
+
+* TODO 20.1.1 Release
+  DEADLINE: <2020-02-23 Sun>
+  - updating intro tutorial and docu => presentation, (online)
+    documentation: still ANSYS-Mode 16.1.!
+** Bug
+   - in fontication system!
 * 20.1.0
 ** misc
    - bug-report about package.el "NAME-readme.txt", done
