--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-02-21>
+#+DATE: Time-stamp: <2020-02-23>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -28,9 +28,9 @@
 #+title: APDL-Mode
 The GNU-Emacs major mode for the programming language APDL
 
-Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
-
 [[file:doc/ansys+emacs2020.png]]
+
+Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
 * Introduction
   APDL ([[https://de.wikipedia.org/wiki/ANSYS_Parametric_Design_Language][ANSYS Parametric Design Language]]) is the solver scripting
@@ -86,9 +86,9 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    directly from your APDL-Mode session without the detour of
    searching in the ANSYS Help Viewer or waiting for the ANSYS online
    help.  This works not only for APDL commands but also element names
-   and other manual topics. (To that end you must have installed the
-   local ANSYS documentation and configured APDL-Mode.)  The topics
-   are shown in a web browser.
+   and other manual topics.  (Since ANSYS V19 the online help is the
+   default.  To speed up the access I reccomend installing the local
+   ANSYS documentation.)  The topics are shown in a web browser.
 
    The image below is showing a manual entry in GNU-Emacs's EWW
    browser. You are able to consult the manual side-by-side with your
@@ -157,17 +157,8 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
   Please read the file [[file:apdl-config.org][apdl-config.org]] and adjust the acompanying
   example file [[file:ansys-config.el][apdl-config.el]].
 * News
-  Please have a look into the [[file:NEWS.org][NEWS]] file
-* License
-  The GPL 3, please read the [[file:LICENSE.org][LICENSE]] file
-* Acknowledgements
-  Acknowledgements to Tim Read and Geoff Foster for their ansys-mod.el
-  from 1997 which triggered the idea in 2006 to start apdl-mode.
-
-  Parts of APDL-Mode were base on octave-mod.el: Copyright (C) 1997
-  Free Software Foundation, Inc.  Author: [[mailto:Kurt.Hornik@wu-wien.ac.at][Kurt Hornik]]
-  Author: [[mailto:jwe@bevo.che.wisc.edu][John Eaton]]
-
+  APDL-Mode uses now for the installation the packaging system of
+  GNU-Emacs.  For further news please have a look into the [[file:NEWS.org][NEWS]] file.
 * Further Resources
 ** Emacs editor resources
    - Emacs [[http://emacs.stackexchange.com][Stackexchange]], the question and answer site.
@@ -188,6 +179,17 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    - The [[http://www.padtinc.com/blog/the-focus/][PADT Focus]] site.
    - A general  ANSYS repository [[http://www.ansys.net][ANSYS.net]]
    - [[http://www.auc-ev.de/][AUC]], the ANSYS User Club eV. in Germany
+* License
+  The GPL v3, the GNU Public license.  There are no costs and no usage
+  restrictions even in commercial application, please read the [[file:LICENSE.org][LICENSE]]
+  file
+* Acknowledgements
+  Acknowledgements to Tim Read and Geoff Foster for their ansys-mod.el
+  from 1997 which triggered the idea in 2006 to start apdl-mode.
+
+  Parts of APDL-Mode were base on octave-mod.el: Copyright (C) 1997
+  Free Software Foundation, Inc.  Author: [[mailto:Kurt.Hornik@wu-wien.ac.at][Kurt Hornik]]
+  Author: [[mailto:jwe@bevo.che.wisc.edu][John Eaton]]
 
 * TODOs
   Please read the [[file:TODO.org][TODO]] file
