--- a/doc/A-M_introductory_tutorial.org
+++ b/doc/A-M_introductory_tutorial.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-02-18>
+#+DATE: Time-stamp: <2020-02-23>
 #+bind: org-html-preamble-format (("en" "%d"))
 # #+DATE: <2013-05-22 Wed>
 # #+OPTIONS: H:1 texht:t
@@ -14,10 +14,10 @@
 # #+LATEX_HEADER:
 # #+LATEX_HEADER_EXTRA:
 
-#+TITLE: *APDL-Mode* for GNU Emacs, an introductory *Tutorial* for version 20.1.0
+#+TITLE: Introductory Tutorial for APDL-Mode
+#+BEAMER_HEADER: \subtitle{A GNU Emacs programming mode for the APDL language, version 20.1.1}
 #+AUTHOR:    H. Dieter Wilhelm
 #+EMAIL:     dieter@duenenhof-wilhelm.de
-# #+DATE:      2012-06-17 Sa
 # #+TEXT: blabla
 #+DESCRIPTION: *APDL-Mode* for GNU Emacs, an introductory *Tutorial* GNU Emacs Editor support for working with ANSYS FEA.
 #+KEYWORDS: Emacs ANSYS FEA APDL
@@ -32,7 +32,7 @@
 # #+BEAMER_HEADER_EXTRA: \usepackage{pdfcomment}
 #+BEAMER_HEADER: \beamertemplatenavigationsymbolsempty
 #+BEAMER_HEADER: \setbeamertemplate{footline}[frame number]
-#+BEAMER_HEADER: \titlegraphic{\includegraphics[width=6cm]{ansys+emacs.png}}
+#+BEAMER_HEADER: \titlegraphic{\includegraphics[width=5cm]{ansys+emacs2020.png}}
 #+BEAMER_FRAME_LEVEL: 2
 #+EXPORT_SELECT_TAGS: export
 #+EXPORT_EXCLUDE_TAGS: noexport
@@ -41,65 +41,68 @@
 #+STYLE: <link rel="icon" href="../../gnu.ico" type="image/x-icon"/>
 #+STYLE: <link rel="shortcut icon" href="../../gnu.ico" type="image/x-icon"/>
 #+XSLT:
-# #+TEXT: Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
+# #+TEXT: Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
-#+HTML: <img src="ansys+emacs.png" height=150 alt="image">
+#+HTML: <img src="ansys+emacs2020.png" height=150 alt="image">
 
 # the text and arrows (line width 4) in the drawings are done with inkscape
 # okular and acroread support PDF annotations, xpdf, Chrome and Evince not
 
 * Introduction
 ** Introducing APDL-Mode -- an APDL environment
-   [[https://github.com/dieter-wilhelm/apdl-mode][This project]] supports your APDL
-#+BEGIN_LaTeX
-\pdfannot % generic annotation
-% width 4cm % the dimension of the annotation can be controlled
-% height 0cm % via <rule spec>; if some of dimensions in
-% depth 4cm % <rule spec> is not given, the corresponding
-% value of the parent box will be used.
-{ %
-/Subtype /Text % text annotation
-/Author (H. Dieter Wilhelm) %
-/T (H. Dieter Wilhelm: Acronyms)
-% /Open true % if given then the text annotation will be opened
-/Contents % text contents
-(APDL = Ansys Parametric Design Language)
-}%\hspace{.4cm}%
-\quad%
-#+END_LaTeX
-   workflows with the FEA
-#+BEGIN_LaTeX
-\pdfannot % generic annotation
-% width 4cm % the dimension of the annotation can be controlled
-% height 0cm % via <rule spec>; if some of dimensions in
-% depth 4cm % <rule spec> is not given, the corresponding
-% value of the parent box will be used.
-{ %
-/Subtype /Text % text annotation
-/Author (H. Dieter Wilhelm) %
-/T (H. Dieter Wilhelm: Acronyms)
-% /Open true % if given then the text annotation will be opened
-/Contents % text contents
-(FEA = Finite Element Analysis)
-}%\hspace{.4cm}%
-\quad%
-#+END_LaTeX
- suite [[http://www.ansys.com][ANSYS]].
-#+BEGIN_LaTeX
-\pdfannot % generic annotation
-% width 4cm % the dimension of the annotation can be controlled
-% height 0cm % via <rule spec>; if some of dimensions in
-% depth 4cm % <rule spec> is not given, the corresponding
-% value of the parent box will be used.
-{ %
-/Subtype /Text % text annotation
-/Author (H. Dieter Wilhelm) %
-/T (H. Dieter Wilhelm: Acronyms)
-% /Opepn true % if given then the text annotation will be opened
-/Contents % text contents
-(ANSYS = ANalysis SYStem, registered TM)
-}%
-#+END_LaTeX
+   [[https://github.com/dieter-wilhelm/apdl-mode][This project]] supports your APDL workflows with the FEA suite [[http://www.ansys.com][ANSYS]].
+# #+BEGIN_export LaTeX
+# \pdfannot % generic annotation
+# % width 4cm % the dimension of the annotation can be controlled
+# % height 0cm % via <rule spec>; if some of dimensions in
+# % depth 4cm % <rule spec> is not given, the corresponding
+# % value of the parent box will be used.
+# { %
+# /Subtype /Text % text annotation
+# /Author (H. Dieter Wilhelm) %
+# /T (H. Dieter Wilhelm: Acronyms)
+# % /Open true % if given then the text annotation will be opened
+# /Contents % text contents
+# (APDL = Ansys Parametric Design Language)
+# }%\hspace{.4cm}%
+# \quad%
+# #+END_export
+#   workflows with the FEA suite [[http://www.ansys.com][ANSYS]].
+
+# #+BEGIN_export LaTeX
+# \pdfannot % generic annotation
+# % width 4cm % the dimension of the annotation can be controlled
+# % height 0cm % via <rule spec>; if some of dimensions in
+# % depth 4cm % <rule spec> is not given, the corresponding
+# % value of the parent box will be used.
+# { %
+# /Subtype /Text % text annotation
+# /Author (H. Dieter Wilhelm) %
+# /T (H. Dieter Wilhelm: Acronyms)
+# % /Open true % if given then the text annotation will be opened
+# /Contents % text contents
+# (FEA = Finite Element Analysis)
+# }%\hspace{.4cm}%
+# \quad%
+# #+END_export
+# suite [[http://www.ansys.com][ANSYS]].
+
+# #+BEGIN_export LaTeX
+# \pdfannot % generic annotation
+# % width 4cm % the dimension of the annotation can be controlled
+# % height 0cm % via <rule spec>; if some of dimensions in
+# % depth 4cm % <rule spec> is not given, the corresponding
+# % value of the parent box will be used.
+# { %
+# /Subtype /Text % text annotation
+# /Author (H. Dieter Wilhelm) %
+# /T (H. Dieter Wilhelm: Acronyms)
+# % /Opepn true % if given then the text annotation will be opened
+# /Contents % text contents
+# (ANSYS = ANalysis SYStem, registered TM)
+# }%
+# #+END_export
+
 #+LaTeX: \\[.2cm]
 #+HTML: <br>
    It provides an editor mode for [[http://www.gnu.org/software/emacs/][GNU Emacs]] for investigating and
@@ -108,82 +111,89 @@
    debugging with the solver or inquiring the license manager status,
    etc.  Some features are quite sophisticated but its documentation
    is accessible for ANSYS users with little APDL and [[http://en.wikipedia.org/wiki/Emacs][Emacs]]
-#+BEGIN_LaTeX
-\pdfannot % generic annotation
-% width 4cm % the dimension of the annotation can be controlled
-% height 0cm % via <rule spec>; if some of dimensions in
-% depth 4cm % <rule spec> is not given, the corresponding
-% value of the parent box will be used.
-{ %
-/Subtype /Text % text annotation
-/Author (H. Dieter Wilhelm) %
-/T (H. Dieter Wilhelm: Acronyms)
-% /Opepn true % if given then the text annotation will be opened
-/Contents % text contents
-(Emacs originally EMACS = Editing MACroS, approx. 1976)
-}\quad%
-#+END_LaTeX
    experience.
+# #+BEGIN_export LaTeX
+# \pdfannot % generic annotation
+# % width 4cm % the dimension of the annotation can be controlled
+# % height 0cm % via <rule spec>; if some of dimensions in
+# % depth 4cm % <rule spec> is not given, the corresponding
+# % value of the parent box will be used.
+# { %
+# /Subtype /Text % text annotation
+# /Author (H. Dieter Wilhelm) %
+# /T (H. Dieter Wilhelm: Acronyms)
+# % /Opepn true % if given then the text annotation will be opened
+# /Contents % text contents
+# (Emacs originally EMACS = Editing MACroS, approx. 1976)
+# }\quad%
+# #+END_export
+#    experience.
 #+LaTeX: \\[.2cm]
 #+HTML: <br>
-   [[http://www.gnu.org/home.en.html][GNU]]
-#+BEGIN_LaTeX
-\pdfannot % generic annotation
-% width 4cm % the dimension of the annotation can be controlled
-% height 0cm % via <rule spec>; if some of dimensions in
-% depth 4cm % <rule spec> is not given, the corresponding
-% value of the parent box will be used.
-{ %
-/Subtype /Text % text annotation
-%/Author (H. Dieter Wilhelm) %
-/T (H. Dieter Wilhelm: Acronyms)
-%/Open true % if given then the text annotation will be opened
-/Contents % text contents
-(GNU = Gnu's Not Unix, a free and open software collection)
-}%\hspace{.4cm}%
-\quad
-#+END_LaTeX
-   Emacs is an up-to-date, powerful and
-   extensible - yet free - editor. High quality software available for
-   every operating system where ANSYS is running.
+#   [[http://www.gnu.org/home.en.html][GNU]]
+# #+BEGIN_export latex
+# \pdfannot % generic annotation
+# % width 4cm % the dimension of the annotation can be controlled
+# % height 0cm % via <rule spec>; if some of dimensions in
+# % depth 4cm % <rule spec> is not given, the corresponding
+# % value of the parent box will be used.
+# { %
+# /Subtype /Text % text annotation
+# %/Author (H. Dieter Wilhelm) %
+# /T (H. Dieter Wilhelm: Acronyms)
+# %/Open true % if given then the text annotation will be opened
+# /Contents % text contents
+# (GNU = Gnu's Not Unix, a free and open software collection)
+# }%\hspace{.4cm}%
+# \quad
+# #+END_export
+  [[http://www.gnu.org/home.en.html][GNU]]-Emacs is an modern, powerful and extensible - yet free -
+  editor. High quality software available for every operating system
+  where ANSYS is running.
+
+* Download and Installation
+** Download GNU-Emacs and the APDL-Mode Tar Package
+   There are no costs and no usage restrictions even in commercial
+   application.  Please download [[https://www.gnu.org/software/emacs/][GNU Emacs]] and the latest APDL-Mode
+   tar file from the [[https://github.com/dieter-wilhelm/apdl-mode/releases][APDL-Mode's releases page]].
+   #+latex: \\[.25cm]
+
+# #+ATTR_HTML: width="900"
+#+BEGIN_EXPORT latex
+\href{https://github.com}{%
+  \includegraphics[width=9cm]{./github.png}%
+}\\[.25cm]
+#+END_EXPORT
+#+HTML: <img src="./github.png" alt="Download page from GitHub">
+Install APDL-Mode from Emacs: Please type: ~M-x
+package-install-file <RET>~ and select the downloaded tar archive.
+#   #+latex: \\[.5cm]
+
+* COMMENT Installation
+** Install APDL-Mode in GNU Emacs
+
+
+# #+ATTR_LaTeX: :width 11cm
+#   [[./emacs_bin_folder.png]]
+
+#  In this list /runemacs.exe/ is the actual editor executable.
+
+* Usage
+** Open an Emacs buffer under APDL-Mode
+  # Start the editor and open /doc/example.mac/ or any other APDL file
+  # (with the extensions /mac/, /ans/, /inp/, /dat/ or /anf/, otherwise
+  # type *M-x apdl* and <RET>).
+
+  Please type: ~M-x apdl <RET>~
+
 #+LaTeX: \\[.4cm]
 #+HTML: <br>
    In the following *C-c* or e. g. *M-c* means typing the <CTRL> or <ALT>
    key together with the `c' key.
 
-* Download
-** Download the GNU-Emacs editor and APDL-Mode
-*** There are *no* costs and *no* license restrictions even for commercial use
-  Please download the latest APDL-Mode tar file from the
-  [[https://github.com/dieter-wilhelm/apdl-mode/releases][APDL-Mode releases page]] on [[https://github.com][GitHub]].
-# #+ATTR_HTML: width="1200"
 
-#+BEGIN_LaTeX
-\href{https://github.com}{%
-  \includegraphics[width=12cm]{./github.png}%
-}
-#+END_LaTeX
-#+HTML: <img src="./github.png" alt="Download page from GitHub">
-
-* Installation
-** Install APDL-Mode together with Emacs
-  Extract the former zip archive to an arbitrary location on your file
-  system.  Optionally you might create Emacs shortcut icons for the
-  system tray with /addpm.exe/ in Emacs' /bin// folder.
-
-#+ATTR_LaTeX: :width 11cm
-  [[./emacs_bin_folder.png]]
-
- In this list /runemacs.exe/ is the actual editor executable.
-
-* Usage
-** Open an APDL macro file with GNU-Emacs
-  Start the editor and open /doc/example.mac/ or any other APDL file
-  (with the extensions /mac/, /ans/, /inp/, /dat/ or /anf/, otherwise
-  type *M-x apdl* and <RET>).
-
-#+ATTR_LaTeX: :height 7.5cm
-  [[./find_file_dialog.png]]
+# #+ATTR_LaTeX: :height 7.5cm
+#   [[./find_file_dialog.png]]
 
 ** Explore the APDL-Mode menus
   If ANSYS is installed in its default folders, also system dependent
@@ -196,11 +206,23 @@
 
 * Selected APDL-Mode Features
 ** Easily inspect WorkBench solver files (/doc/example.dat/)
-   APDL-Mode hides the normally uninteresting but usually very
-   large number blocks.  On the right hand side is the unhidden content.
-#+ATTR_LaTeX: :height 7.5cm
+   APDL-Mode hides the normally uninteresting but usually very large
+   number blocks.  On the right hand side is the unhidden content.  If
+   APDL-Mode is not yet configured for /.dat/ files please type:
+   #+begin_src elisp :exports code
+   M-x apdl-mode
+   #+end_src
+*** Col left                                                          :BMCOL:
+   :PROPERTIES:
+   :BEAMER_col: 0.6
+   :END:
+   #+ATTR_LaTeX: :height 7.5cm
   [[./hidden_blocks.png]]
-#+ATTR_LaTeX: :height 7.5cm
+*** Col right                                                         :BMCOL:
+   :PROPERTIES:
+   :BEAMER_col: 0.45
+   :END:
+   #+ATTR_LaTeX: :height 7.5cm
   [[./unhidden_blocks.png]]
 
 ** COMMENT Use the APDL-Mode APDL command help
@@ -287,10 +309,9 @@
   [[./alignment.png]]
 
 ** Use the Emacs integrated, programmable RPN calculator
-   Type *C-x* * * to open the calculator, type *y* for pasting results
-   directly into the APDL file. *q* to quit the 'Emacs Calc' windows.
-
-#+ATTR_LaTeX: :height 7.5cm
+   Type ~C-x * *~ to open the calculator, type ~y~ for pasting results
+   directly into the APDL file.  And ~q~ to quit the `Calc' windows.
+#+ATTR_LaTeX: :height 7cm
   [[./calculator.png]]
 ** Display the license status and preview images
    In Emacs' lower-half you see the license status (*C-c C-l*).  All
