--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-24>
+#+DATE: Time-stamp: <2020-02-25>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -17,6 +17,9 @@
 
 #+STARTUP: showall
 * 20.2.0 Release
+  - online help works now also for v201:
+  - start the APDL manual also online
+
   - WB template system => template branch
     - dispatcher / selctor : keyword search
     - temperature dependent material
@@ -25,8 +28,8 @@
     - writing files
     - brittle failure criterion
 ** Todos
-   - 1/en, en is variable but fraction not fontified
-   - what is the advantage of ARG1-9?
+   - 1/en, en is variable but fraction not fontified?
+   - what is the advantage of ARG1-9? => parameter system
    - C-c C-s in *APDL code* file-name-extension: Wrong type argument:
      stringp, nilError during redisplay: (jit-lock-function 1)
      signaled (wrong-type-argument stringp nil)
