Update initalisation system
to at least MAPDL v195

--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2020-02-24>
+#+DATE: Time-stamp: <2020-02-26>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -154,8 +154,15 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
   The complete [[http://dieter-wilhelm.github.io/apdl-mode][documentation of APDL-Mode]] is available online
 * Configuration and Customisation
-  Please read the file [[file:apdl-config.org][apdl-config.org]] and adjust the acompanying
-  example file [[file:ansys-config.el][apdl-config.el]].
+  Most functionality of APDL-Mode is working without additional
+  configurations.  APDL-Mode should be intelligent enough to figure
+  out ANSYS installation dependent configurations.  (It uses by
+  default the highest installed ANSYS version.)
+
+  I recommend configuring GNU-Emacs to autoload APDL-Mode for certain
+  file endings, especially the `.mac' suffix.  Please read the file
+  [[file:apdl-config.org][apdl-config.org]], or the accompanying template file [[file:ansys-config.el][apdl-config.el]].
+
 * News
   Please have a look into the [[file:NEWS.org][NEWS]] file
 * License
