Start implementing a WorkBench template system

--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-25>
+#+DATE: Time-stamp: <2020-02-27>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -19,10 +19,16 @@
 Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 
 ** Version 20.2.0
-   - Updated docu for keywords, elements, etc. to v193 (mostly to v201)
-   - A-M can also use the ANSYS online-help (you don't have to install
-     the local ANSYS help package, but you should because of speed
-     reasons ;-)
+   - Added a template preview system for Worbench `Command (APDL)'
+     objects with the keybinding `C-c C-w' (this keybinding was
+     formerly used for starting WorkBench).
+   - Improved the automated configuration of ANSYS installation
+     dependent components
+   - Updated docu and completions for keywords, elements, etc. to v193
+     (mostly to v201)
+   - A-M can now call the ANSYS online-help (you don't have to install
+     the local ANSYS help package, but it is recommended because of
+     speed reasons ;-)
 ** Version 20.1.1 2020-02
    - Renamed apdl-browse-apdl-guide to apdl-browse-ansys-apdl-manual
    - Improved configuration docu
