--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-27>
+#+DATE: Time-stamp: <2020-02-28>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -16,29 +16,34 @@
 # CAD Kernel of spaceclaim is ACIS (licensed from Dassault)
 
 #+STARTUP: showall
-* 20.2.0 Release
+* TODO 20.2.0 Release
 
   Feature freeze [2020-02-27 Do]
   Testing of the template branch
+  Update documentation, html brutally outdated, ..
+  - gh-pages:
+    - create a README.org (copy from index.org?)
+    - makefile for htmls or is it org-mode publish
 
 ** Todos, bugs
+   - M-? with too many commas throws an error, then the counting is
+     not updated any longer!
    - -wbt-if: strange behaviour
    - first time start: file-mode specification error:
      (wrong-type-argument)? the same with templates!!
    - C-c C-s in *APDL code* file-name-extension: Wrong type argument:
-     stringp, nilError during redisplay: (jit-lock-function 1)
-     signaled (wrong-type-argument stringp nil)
+     Clear: buffer without a file name stringp, nilError during
+     redisplay: (jit-lock-function 1) signaled (wrong-type-argument
+     stringp nil)
    - First edit in *APDL code*: self-insert-command: Wrong number of
       arguments: (0 . 0), 3
 ** checks
-   - M-? with too many commas throws an error, is the error message
-     good enough?
+   - check C-c C-b with topics
    - Customisation system
    - changed file size without warning to 30 MB what is Emacs-26
      using?
-   - Check C-c C-b, seems not to work for "v201"
-     apdl-current-ansys-version, Ansys included an "en"
 ** minor bugs
+   - Remove times stamp in *License* buffer when updating with `g'.
    - 1/en, en is variable but fraction not fontified?
    - check highlighting of -license-category
    - The APDL menu entry in the terminal is not working => wrong type
@@ -58,8 +63,7 @@
      in -template.el, how about document this directory somewhere?
    - Start runbWB2 --aim, Discovery AIM
 
-* TODO 20.1.1 Release
-  DEADLINE: <2020-02-23 Sun>
+* DONE 20.1.1 Release
   - updating intro tutorial and docu => presentation, (online)
     documentation: still ANSYS-Mode 16.1.!
 ** Bug
