--- a/matlib/README.org
+++ b/matlib/README.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2016-01-20>
+#+DATE: Time-stamp: <2020-02-28>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:{} arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -11,26 +11,23 @@
 #+LANGUAGE: en
 #+SELECT_TAGS: export
 #+EXCLUDE_TAGS: noexport
-#+CREATOR: Emacs 24.5.1 (Org mode 8.2.10)
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
 #+HTML_DOCTYPE: xhtml-strict
 #+HTML_CONTAINER: div
-#+HTML_LINK_HOME: https://github.com/dieter-wilhelm/ansys-mode
+#+HTML_LINK_HOME: https://github.com/dieter-wilhelm/apdl-mode
 #+HTML_LINK_UP: ../index.html
 #+HTML_HEAD:
 #+HTML_HEAD_EXTRA:
 #+HTML_MATHJAX:
 #+INFOJS_OPT:
-#+CREATOR: <a href="http://www.gnu.org/software/emacs/">Emacs</a> 24.5.1 (<a href="http://orgmode.org">Org</a> mode 8.2.10)
 #+LATEX_HEADER:
 
-
 #+STARTUP: showall
-#+TITLE: This is the text of ANSYS-Mode's README.org for the matlib/ directory
+#+TITLE: This Apdl-Mode's README.org for the matlib/ directory
   Its text is best read in Emacs' Org mode.
 
-  Copyright (C) 2015  H. Dieter Wilhelm, GPL V3
+  Copyright (C) 2015 - 2020  H. Dieter Wilhelm, GPL V3
 
   If not indicated otherwise in the file name, material properties are
   linear and for room temperature.
@@ -71,7 +68,7 @@ mpwrite
 mplist ! Check
   #+END_SRC
 
-* Materials defined in ANSYS-Mode's library
+* Materials defined in Apdl-Mode's library
   - 42CrMo4_biso_Rp850.MPA_MPL ::
   - AlSi9Cu3_biso.MPA_MPL ::
   - C75s_hardened_kinh.MPA_MPL ::
@@ -97,10 +94,8 @@ mplist ! Check
        with a factor of 0.8 from test specimen to account for a random
        fibre orientation in thick walled parts.  They might be used as
        an example for data fitting with the TBFT command.
-* Restrictions of the material models
-  - 
-
 -----
+* COMMENT Restrictions of the material models
 # LOCAL variables:
 # word-wrap: t
 # show-trailing-whitespace: t
